updates to prices, updates and fixes throughout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
       <div class="">
 
-        <h4 class="whiteText centerText">Alana's Runnin With Scizzors</h4>
+        <h4 class="whiteText centerText">Alana's Runnin' With Scizzors</h4>
 
         <h5 class="whiteText centerText">Hair Salon Reedsburg, WI</h5>
 
@@ -26,7 +26,7 @@
 
           <div id="copyrightWrap">
 
-            <i class="whiteIcon icon-copyright" id="copyrightIcon"></i><p>&nbsp;<script>document.write(new Date().getFullYear());</script> Runnin With Scizzors</p>
+            <i class="whiteIcon icon-copyright" id="copyrightIcon"></i><p>&nbsp;<script>document.write(new Date().getFullYear());</script> Runnin' With Scizzors</p>
 
           </div>
 
