--- a/_scss/_buttons.scss
+++ b/_scss/_buttons.scss
@@ -1,95 +1,42 @@
-/* 7.0 Button Stylings ---------------------------------------*/
-.redLink{
-  color: $primaryColor !important;
-	transition: .3s ease all;
-    &:hover{
-      transition: .3s ease all;
-    	color: #1d1d1d !important;
-    }
+.whiteButton {
+  position: relative;
+  z-index: 1;
+  border: 2px solid $white;
+  background: $transparent;
+  padding: 10px 100px 10px 100px;
+  margin: 20px 0 20px 0;
+  color: $primaryColor;
+  -webkit-transition: 0.3s ease all;
+  transition: 0.3s ease all;
+  cursor: pointer;
+  box-shadow: 1px 2px 10px rgba(42, 42, 42, 0.6);
+  &:hover {
+    background: $white;
+    -webkit-transition: 0.3s ease all;
+    transition: 0.3s ease all;
+  }
 }
-.primaryButton{
-	position: relative;
-	z-index:1;
-	border: 2px solid $primaryColor;
-	border-radius: 30px;
-	background: $primaryColor;
-	padding: 10px 50px 10px 50px;
-	color: $white !important;
-	text-shadow: 0 1px 1px rgba(0,0,0,1);
-	margin-bottom: 10px;
-	transition: .3s ease all;
-  box-shadow: 1px 2px 10px rgba(42,42,42,.6);
-	cursor: pointer;
-    &:hover{
-      background: $transparent!important;
-    	transition: .3s ease all;
-    	color: $primaryColor !important;
-    }
+.centerButton {
+  margin: 0 auto;
+  text-align: center;
 }
-.primaryButtonReverse{
-	position: relative;
-	z-index:1;
-	border: 2px solid $primaryColor;
-	border-radius: 30px;
-	padding: 10px 50px 10px 50px;
-	color: $primaryColor;
-	margin-bottom: 10px;
-	transition: .3s ease all;
-	cursor: pointer;
-    &:hover{
-      background: $primaryColor;
-    	transition: .3s ease all;
-    	color: $white;
-    }
-}
-.plainRedButton{
-	position: relative;
-	z-index:1;
-	border: 2px solid $primaryColor;
-	background: $primaryColor;
-	padding: 10px 50px 10px 50px;
-	color: $white;
-	margin-bottom: 10px;
-	transition: .3s ease all;
-	cursor: pointer;
-}
-.whiteButton{
-	position: relative;
-	z-index:1;
-	border: 2px solid $white;
-	background: $transparent;
-	padding: 10px 100px 10px 100px;
-	color: $primaryColor;
-	transition: .3s ease all;
-	cursor: pointer;
-  box-shadow: 1px 2px 10px rgba(42,42,42,.6);
-    &:hover{
-      background: $white;
-    	transition: .3s ease all;
-    }
-      @include breakpoint(smallScreen){
-        margin: 20px 0 20px 0;
-      }
-      @include breakpoint(largeMobileScreen){
-        margin: 20px 0 20px 0;
-      }
-}
-.centerButton{
-	margin: 0 auto;
-	text-align: center;
-}
-.buttonWrap{
-	display: flex;
-	justify-content: space-evenly;
-	width: 100%;
-	text-align: center;
-    @include breakpoint(smallScreen){
-      flex-direction:column;
-    }
-    @include breakpoint(largeMobileScreen){
-      flex-direction:column;
-    }
-    @include breakpoint(laptopScreen){
-      flex-direction: row;
-    }
+.buttonWrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  width: 100%;
+  text-align: center;
+  @include breakpoint(laptopScreen) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
 }
