--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -1,285 +1,272 @@
 /* 3.0 Our page layouts -------------------------------------------*/
-.col20{
-	width: 20%;
-    @include breakpoint(smallScreen){
-      width: 100%;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 100%;
-    }
-    @include breakpoint(laptopScreen){
-      width: 20%;
-    }
+.col20 {
+  width: 100%;
+  @include breakpoint(laptopScreen) {
+    width: 20%;
+  }
 }
-.col30{
-	width: 33.3333%;
-    @include breakpoint(smallScreen){
-      width: 100%;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 100%;
-    }
-    @include breakpoint(laptopScreen){
-      width: 33.3333%;
-    }
+.col30 {
+  width: 100%;
+  @include breakpoint(laptopScreen) {
+    width: 33.3333%;
+  }
 }
-.col40{
-	width: 40%;
-    @include breakpoint(smallScreen){
-      width: 100%;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 100%;
-    }
-    @include breakpoint(laptopScreen){
-      width: 40%;
-    }
+.col40 {
+  width: 100%;
+  @include breakpoint(laptopScreen) {
+    width: 40%;
+  }
 }
-.col50{
-	width: 50%;
-    @include breakpoint(smallScreen){
-      width: 100%;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 100%;
-    }
-    @include breakpoint(laptopScreen){
-      width: 50%;
-    }
+.col50 {
+  width: 100%;
+  @include breakpoint(laptopScreen) {
+    width: 50%;
+  }
 }
-.col60{
-	width: 60%;
-    @include breakpoint(smallScreen){
-      width: 100%;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 100%;
-    }
-    @include breakpoint(laptopScreen){
-      width: 60%;
-    }
+.col60 {
+  width: 100%;
+  @include breakpoint(laptopScreen) {
+    width: 60%;
+  }
 }
-.col70{
-	width: 70%;
-    @include breakpoint(smallScreen){
-      width: 100%;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 100%;
-    }
-    @include breakpoint(laptopScreen){
-      width: 70%;
-    }
+.col70 {
+  width: 100%;
+  @include breakpoint(laptopScreen) {
+    width: 70%;
+  }
 }
-.col80{
-  width: 80%;
-    @include breakpoint(smallScreen){
-      width: 100%;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 100%;
-    }
-    @include breakpoint(laptopScreen){
-      width: 80%;
-    }
+.col80 {
+  width: 100%;
+  @include breakpoint(laptopScreen) {
+    width: 80%;
+  }
 }
-.pageWidth{
-		width: 70%;
-		height: 100%;
-		margin: 0 auto;
-      @include breakpoint(smallScreen){
-        width: 90%;
-      }
-      @include breakpoint(largeMobileScreen){
-        width: 90%;
-      }
-      @include breakpoint(laptopScreen){
-        width: 80%;
-      }
-			@include breakpoint(largeScreen){
-        width: 70%;
-      }
-	}
-.fullWidth{
+.container {
+  padding-right: 20px;
+  padding-left: 20px;
+  margin: 0 auto;
+  width: auto;
+  @include breakpoint(laptopScreen) {
+    width: 70ch;
+  }
+}
+.container-wide {
+  width: auto;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 32px;
+  padding: 0 2rem;
+  @include breakpoint(laptopScreen) {
+    width: 80%;
+  }
+}
+.pageWidth {
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  @include breakpoint(laptopScreen) {
+    width: 80%;
+  }
+  @include breakpoint(largeScreen) {
+    width: 70%;
+  }
+}
+.fullWidth {
   width: 100%;
 }
-.contentBlock{
-  	width: 70%;
-    @include breakpoint(smallScreen){
-      width: 90%;
-      margin: 0 auto;
-		  height: auto;
-      padding: 50px 20px 50px 20px;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 90%;
-      margin: 0 auto;
-		  height: auto;
-      padding: 50px 20px 50px 20px;
-    }
-    @include breakpoint(laptopScreen){
-      width: 70%;
-    }
+.contentBlock {
+  width: 90%;
+  margin: 0 auto;
+  height: auto;
+  padding: 50px 20px 50px 20px;
+  @include breakpoint(laptopScreen) {
+    width: 70%;
   }
-.blockText{
-	padding: 50px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-    @include breakpoint(smallScreen){
-      padding: 20px;
-    }
-    @include breakpoint(largeMobileScreen){
-      padding: 20px;
-    }
-    @include breakpoint(laptopScreen){
-      padding: 20px;
-    }
-		@include breakpoint(largeScreen){
-			padding: 50px;
-		}
 }
-.textWrap{
-  padding: 50px;
-  width: 70%;
-	margin: 0 auto;
-    @include breakpoint(smallScreen){
-      width: 90%;
-		  padding: 20px;
-    }
-    @include breakpoint(largeMobileScreen){
-      width: 90%;
-		  padding: 20px;
-    }
-    @include breakpoint(laptopScreen){
-      padding: 50px;
-      width: 70%;
-    }
-	}
-.hero{
-	position: relative;
-	z-index: 1;
-	height: 90vh;
-	width: 100%;
-	background-size: cover;
-	background-repeat: no-repeat;
-    @include breakpoint(smallScreen){
-      height: 50vh;
-    }
-    @include breakpoint(largeMobileScreen){
-      height: 70vh
-    }
-    @include breakpoint(laptopScreen){
-      height: 80vh;
-    }
-	}
-.heroOverlay{
+.blockText {
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.textWrap {
+  width: 90%;
+  padding: 20px;
+  margin: 0 auto;
+  @include breakpoint(largeMobileScreen) {
+    width: 90%;
+    padding: 20px;
+  }
+  @include breakpoint(laptopScreen) {
+    padding: 50px;
+    width: 70%;
+  }
+}
+.hero {
+  position: relative;
+  z-index: 1;
+  height: 50vh;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  @include breakpoint(largeMobileScreen) {
+    height: 70vh;
+  }
+  @include breakpoint(laptopScreen) {
+    height: 80vh;
+  }
+}
+.heroOverlay {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 999;
-  height: 90vh;
+  height: 50vh;
   width: 100%;
   content: "";
-	background: rgba(0,0,0,.5);
-  @include breakpoint(smallScreen){
-    height: 50vh;
+  background: rgba(0, 0, 0, 0.5);
+  @include breakpoint(largeMobileScreen) {
+    height: 70vh;
   }
-  @include breakpoint(largeMobileScreen){
-    height: 70vh
-  }
-  @include breakpoint(laptopScreen){
+  @include breakpoint(laptopScreen) {
     height: 80vh;
   }
 }
-.flex-container{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-    @include breakpoint(smallScreen){
-      flex-direction: column;
-    }
-    @include breakpoint(largeMobileScreen){
-      flex-direction: column;
-    }
-    @include breakpoint(laptopScreen){
-      flex-direction: row;
-    }
+.flex-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  @include breakpoint(largeMobileScreen) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  @include breakpoint(laptopScreen) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
 }
-.flex-container-reverse{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-    @include breakpoint(smallScreen){
-      flex-direction: column-reverse;
-    }
-    @include breakpoint(largeMobileScreen){
-      flex-direction: column-reverse;
-    }
-    @include breakpoint(laptopScreen){
-      flex-direction: row;
-    }
+.flex-container-reverse {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: column-reverse;
+  flex-direction: column-reverse;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  @include breakpoint(largeMobileScreen) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+  @include breakpoint(laptopScreen) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
 }
-.centerAlignedContainer{
-	display: flex;
-	align-items: center;
+.centerAlignedContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
-.centeredContainer{
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	flex-direction: column;
+.centeredContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
-.textWrap{
-	width: 90%;
-	padding: 20px;
-    @include breakpoint(laptopScreen){
-      padding: 50px;
-      width: 70%;
-      margin: 0 auto;
-    }
+.textWrap {
+  width: 90%;
+  padding: 20px;
+  @include breakpoint(laptopScreen) {
+    padding: 50px;
+    width: 70%;
+    margin: 0 auto;
+  }
 }
-.blockWrap{
-	display: flex;
-	margin-bottom: 100px;
+.blockWrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 100px;
 }
-.blockImage{
-	display: flex;
-	max-width:100%;
-	max-height: 100%;
+.blockImage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 100%;
+  max-height: 100%;
 }
-.imageBlock{
-	padding: 100px 0 100px 0;
+.imageBlock {
+  padding: 100px 0 100px 0;
 }
-.image{
-	width: 100%;
-	height: 100%;
+.image {
+  width: 100%;
+  height: 100%;
 }
-.textBlock{
-	padding: 0;
-	margin: 50px 0 50px 0;
-	background: $white;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
+.textBlock {
+  padding: 0;
+  margin: 50px 0 50px 0;
+  background: $white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
 }
-.greyBlock{
-	padding: 100px 0 100px 0;
-	background: $lightGrey;
+.greyBlock {
+  padding: 100px 0 100px 0;
+  background: $lightGrey;
 }
-.blackBlock{
-	background: $black;
+.blackBlock {
+  background: $black;
 }
-.page-content{
-	position: relative;
-	z-index: 2;
-	margin-top: 50vh;
-	background: $white;
+.page-content {
+  position: relative;
+  z-index: 2;
+  margin-top: 50vh;
+  background: $white;
 }
-.smallPaddedSection{
-	padding: 50px 0 50px 0;
+.smallPaddedSection {
+  padding: 50px 0 50px 0;
 }
-.paddedSection{
-	padding: 100px 0 100px 0;
+.paddedSection {
+  padding: 100px 0 100px 0;
 }
