--- a/_scss/_services.scss
+++ b/_scss/_services.scss
@@ -1,27 +1,46 @@
 /* 11.0 Service Page Styling --------------------------------------- */
-#serviceHero{
+#serviceHero {
   background-image: url("../img/portfolio/hairstylingTools02.jpg");
 }
-.priceBlock{
-  background: #fafafa;
-  box-shadow: 2px 2px 10px rgba(132,132,132,.5);
-  margin: 0 10px;
-    @include breakpoint(smallScreen){
-      margin: 10px 0;
-    }
-    @include breakpoint(largeMobileScreen){
-      margin: 10px 0;
-    }
-    @include breakpoint(laptopScreen){
-      margin: 0 10px;
-    }
+.pricing {
+  width: 95%;
+  margin: 0 auto;
+  max-width: 1400px;
 }
-.outerPriceWrap{
+.priceBlock {
+  background: #fafafa;
+  box-shadow: 2px 2px 10px rgba(132, 132, 132, 0.5);
+  margin: 0 10px;
+  @include breakpoint(smallScreen) {
+    margin: 10px 0;
+  }
+  @include breakpoint(largeMobileScreen) {
+    margin: 10px 0;
+  }
+  @include breakpoint(laptopScreen) {
+    margin: 0 10px;
+  }
+}
+.outerPriceWrap {
   padding: 20px;
 }
-.priceWrap{
-  display:flex;
+.priceWrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   border-bottom: 1px solid #e6e6e6;
+  text-align: left;
+}
+.service {
+  text-align: left;
+}
+.price {
+  text-align: right;
 }
