--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -5,57 +5,68 @@ input,
 select,
 optgroup,
 textarea {
-	color: #020101;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 20px;
-	line-height: 1.5;
+  color: #020101;
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  line-height: 1.5;
 }
-h1,h2,h3,h4,h5,h6{
-	font-family: 'Montserrat', sans-serif;
-	line-height: 1.2em;
-	font-weight: 700;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.2em;
+  font-weight: 700;
+  margin-bottom: 1.526em;
+  max-width: 70ch;
 }
-h1{
-	font-size: 2em;
-    @include breakpoint(largeMobileScreen){
-      font-size: 2.827em;
-    }
+p {
+  margin-bottom: 1.526em;
+  max-width: 70ch;
 }
-h2{
-	font-size: 1.999em;
+h1 {
+  font-size: 2em;
+  @include breakpoint(largeMobileScreen) {
+    font-size: 2.827em;
+  }
 }
-h3{
-	font-size: 1.414em;
+h2 {
+  font-size: 1.999em;
 }
-h4{
-	font-size: 1em;
+h3 {
+  font-size: 1.414em;
 }
-h5{
-	font-size: 1em;
+h4 {
+  font-size: 1em;
 }
-h6{
-	font-size: 0.707em;
+h5 {
+  font-size: 1em;
 }
-.whiteText{
-	color: $white;
-	text-shadow: 0 2px 2px rgba(0,0,0,1);
+h6 {
+  font-size: 0.707em;
 }
-.primaryText{
-	color: $primaryColor;
-	text-shadow: 0 2px 2px rgba(0,0,0,.4);
+.whiteText {
+  color: $white;
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 1);
 }
-.centerText{
-	text-align: center;
+.primaryText {
+  color: $primaryColor;
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
 }
-.underlinedHeading{
-	position: relative;
-    &:after{
-      position: absolute;
-    	background: $primaryColor;
-    	height: 2px;
-    	width: 200px;
-    	content: "";
-    	left: 0;
-    	bottom: -20px;
-    }
+.centerText {
+  text-align: center;
+}
+.underlinedHeading {
+  position: relative;
+  &:after {
+    position: absolute;
+    background: $primaryColor;
+    height: 2px;
+    width: 200px;
+    content: "";
+    left: 0;
+    bottom: -20px;
+  }
 }
