--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -5,16 +5,17 @@ Author URI: https://seejustincode.com/
 Version: 1.0.1
 */
 
-@import '_variables';
-@import '_breakpoints';
-@import '_layout';
-@import '_header';
-@import '_footer';
-@import '_typography';
-@import '_buttons';
-@import '_general';
-@import '_icons';
-@import '_home';
-@import '_services';
-@import '_privacyPolicy';
-@import '_contact';
+@import "_reset";
+@import "_variables";
+@import "_breakpoints";
+@import "_layout";
+@import "_header";
+@import "_footer";
+@import "_typography";
+@import "_buttons";
+@import "_general";
+@import "_icons";
+@import "_home";
+@import "_services";
+@import "_privacyPolicy";
+@import "_contact";
